# backend/routes/authRoutes.js
@@ -1,0 +1,7 @@
+const express = require('express');
+const router = express.Router();
+const { loginAdministrador } = require('../controllers/authController');
+
+router.post('/login', loginAdministrador);
+
+module.exports = router;
