# backend/routes/productoRoutes.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const router = express.Router();
+const verificarToken = require('../middlewares/authMiddleware');
 const {
   crearProducto,
   obtenerProductos,
@@ -9,11 +10,14 @@ const {
   eliminarProducto,
 } = require('../controllers/productoController');
 
-router.post('/', crearProducto);
-router.get('/', obtenerProductos);
-router.get('/:id', obtenerProductoPorId);
-router.put('/:id', actualizarProducto);
-router.patch('/:id', patchProducto);
-router.delete('/:id', eliminarProducto);
+// Rutas públicas
+router.get('/', obtenerProductos);          // Listar productos
+router.get('/:id', obtenerProductoPorId);   // Obtener producto por ID
+
+// Rutas protegidas
+router.post('/', verificarToken, crearProducto);           // Crear producto
+router.put('/:id', verificarToken, actualizarProducto);    // Actualizar producto completo
+router.patch('/:id', verificarToken, patchProducto);       // Actualizar parcialmente producto
+router.delete('/:id', verificarToken, eliminarProducto);   // Eliminar producto
 
 module.exports = router;
